# oipie-api-core

./: .gitignore  .pylintrc  Dockerfile  Dockerfile.release  Dockerfile.web  Procfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: branch_push.yaml  branch_push_action.yaml  deploy_on_master.yaml  main.yaml  merge_master.yaml  pull_request.yaml  python.yaml  staging.yaml  tests_on_push.yaml
docs/: ide-settings.md
scripts/: create-multiple-postgresql-databases.sh  entrypoint.sh
src/: __init__.py  app.py
src/api/auth/: auth_controller.py
src/api/auth/dtos/: login_response_dto.py
src/api/health/: health_controller.py
src/api/recipes/: recipes_controller.py
src/api/shared/: handle_http_exception.py
src/api/shared/dtos/: paginated_response_dto.py
src/config/: container.py  database.py  database_handler.py  db.py  jwt.py  session_handler.py
src/config/migrations/: env.py
src/config/migrations/versions/: 02d53c402801_create_recipes_table.py  1661961077_a555a99c3854_create_recipes_table.py  1664203080_45d4ad9a32de_remove_id_from_recipes.py  1664207599_5e63fa25a2f3_remove_id_from_users.py  45d4ad9a32de_remove_id_from_recipes.py  9f2eba8362ea_create_users_table.py  a555a99c3854_create_recipes_table.py
src/core/recipes/application/: recipes_lister.py  recipies_lister.py  test_recipes_lister.py
src/core/recipes/domain/: recipe.py  recipes_repository.py  test_recipe.py
src/core/recipes/infrastructure/: recipe_model.py  recipes_repository_fake.py  recipes_repository_sqlalchemy.py
src/core/users/application/: test_users_login.py  test_users_registerer.py  users_login.py  users_registerer.py
src/core/users/domain/: test_user.py  user.py  users_repository.py
src/core/users/domain/errors/: user_with_email_already_exists_error.py  user_with_nickname_already_exists_error.py
src/core/users/infrastructure/: test_user_repository_sqlalchemy.py  user_model.py  user_repository_sqlalchemy.py
src/shared/services/password/: argon2_password.py  plain_text_password.py
src/shared/services/tokenizer/: jwt_tokenizer.py
src/shared/services/tokenizer/errors/: invalid_token_error.py
src/tests/: conftest.py
src/tests/api/auth/: test_user_login.py  test_user_register.py
src/tests/api/health/: test_show_health.py
src/tests/api/recipes/: test_index_recipes.py  test_recipes_index_health.py
src/tests/fixtures/: recipe_fixture.py  user_fixture.py
src/tests/utils/: api_client.py
test/: conftest.py
test/health/: test_show_health.py
tests/: conftest.py
tests/fixtures/: recipe_fixture.py
