[tool.black]
line-length = 100

[tool.poetry]
authors = [
  "Daniel Ramos <danielramos@acidtango.com>",
  "Jaume Moreno <jaume@acidtango.com>",
  "Diego Machín <diego@acidtango.com>",
  "Jorge Bodega <jorge@acidtango.com>",
]
name = "oipie-api-core"
version = "0.0.1"
description = "API to list recipes"
license = "MIT"

[tool.poetry.dependencies]
dependency-injector = "4.40.0"
Flask = "2.2.2"
Flask-Migrate = "3.1.0"
Flask-SQLAlchemy = "2.5.1"
gunicorn = "20.1.0"
psycopg2-binary = "2.9.3"
python = "3.10.6"
SQLAlchemy = "1.4.40"
typing_extensions = "4.3.0"
argon2-cffi = "^21.3.0"
PyJWT = "^2.5.0"

[tool.poetry.group.dev.dependencies]
black = "22.8.0"
pylint = "2.15.0"
pylint-flask = "0.6.0"
pylint-flask-sqlalchemy = "0.2.0"
pytest = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
